--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 <body>
-    <canvas id="js-game"></canvas>
     <form class="js-form-login">
         <input class="js-user-name" type="text" value="User-1" placeholder="Username" />
         <button class="js-button-play" type="submit">PLAY</button>
     </form>
+    <canvas class="js-game"></canvas>
 </body>
 </html>
