--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -5,6 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 <body>
-    <canvas class="js-game"></canvas>
+    <canvas class="js-game canvas"></canvas>
 </body>
 </html>
