--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 <body>
-    <div class="js-game map-wrapper">
-        <canvas class="js-game-canvas canvas"></canvas>
+    <div class="wrapper">
+        <div class="js-game map-wrapper">
+            <canvas class="js-game-canvas canvas"></canvas>
+        </div>
+        <canvas class="js-leaderboard leaderboard" />
     </div>
 </body>
 </html>
